--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,66 +1,40 @@
-.main-content {
-    display: flex;
-    flex-direction: column;
-    min-height: calc(100vh - 80px);
-    background: #ffffff;
-    box-shadow: 0px 3px 6px #00000029;
-    border: 1px solid #f5f5f5d0;
-    padding: 30px 0 10px;
-    box-sizing: border-box;
-    border-radius: 15px;
-    margin-left: 150px;
-    margin-right: 150px;
-}
-
 .header-content {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-top: 5px;
+    border: 0px solid green;
 }
 
-.sub-main-content {
-    justify-content: space-between;
-    width: 80%;
-    margin: 0 auto;
-    padding-bottom: 5px;
-}
-
-.emp-details-text {
-    font-family: Roboto;
-    font: normal normal bold italic 24px/25px Roboto;
+.emp-detail-text {
+    font: normal normal bold 24px/25px Roboto;
     letter-spacing: 0px;
     color: #42515f;
     opacity: 1;
+    width: 63%;
 }
 
-.emp-count {
-    background-color: #82a70c;
-    color: #ffffff;
-    border-radius: 50%;
-    font-size: 20px;
-    width: 40px;
-    text-align: center;
-    display: inline-block;
+.main-content {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 600px);
+    background-color: #f7f7f7;
+    padding: 30px 0 10px;
+    box-sizing: border-box;
 }
 
 .add-button {
-    font-size: 21px;
-    font-family: Roboto;
-    font-weight: 400;
+    font: normal normal normal 22px/29px Roboto;
     letter-spacing: 0px;
     color: #ffffff;
-    background: #82A70C 0% 0% no-repeat padding-box;
-    border-radius: 9px;
     opacity: 1;
-    border: 2px solid #969696;
-    padding: 7px 7px;
-    padding-top: 12px;
+    background: #82a70c 0% 0% no-repeat padding-box;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 18px;
     outline: none;
     cursor: pointer;
     text-decoration: none;
-    display: flex;
 }
 
 .plus-icon {
@@ -88,7 +62,8 @@ th {
 }
 
 th {
-    background: #042849 0% 0% no-repeat padding-box;
+    background: #42515f;
+    border-radius: 3px 3px 0px 0px;
     text-align: left;
     font: normal normal medium 18px/24px Roboto;
     letter-spacing: 0px;
