Added : Delete function

--- a/src/app/add-employee/add-employee.component.html
+++ b/src/app/add-employee/add-employee.component.html
@@ -17,20 +17,20 @@
             <div class="profile-radio-content">
                 <mat-radio-group ngDefaultControl formControlName="profilePic">
                     <mat-radio-button name="profile" color="primary"
-                        value="../assets/profile-images/Ellipse -3.png" >
-                        <img class="profile" id='image1' src="../assets/profile-images/Ellipse -3.png">
+                        value="../assets/profile-images/Ellipse 3.png" >
+                        <img class="profile" id='image1' src="../assets/profile-images/Ellipse 3.png">
                     </mat-radio-button>
                     <mat-radio-button name="profile" color="primary"
                         value="../assets/profile-images/Ellipse 1.png" >
                         <img class="profile" id='image2' src="../assets/profile-images/Ellipse 1.png">
                     </mat-radio-button>
                     <mat-radio-button name="profile" color="primary"
-                        value="../assets/profile-images/Ellipse -8.png">
-                        <img class="profile" id='image3' src="../assets/profile-images/Ellipse -8.png">
+                        value="../assets/profile-images/Ellipse 8.png">
+                        <img class="profile" id='image3' src="../assets/profile-images/Ellipse 8.png">
                     </mat-radio-button>
                     <mat-radio-button name="profile" color="primary"
-                        value="../assets/profile-images/Ellipse -7.png">
-                        <img class="profile" id='image4' src="../assets/profile-images/Ellipse -7.png">
+                        value="../assets/profile-images/Ellipse 7.png">
+                        <img class="profile" id='image4' src="../assets/profile-images/Ellipse 7.png">
                     </mat-radio-button>
                 </mat-radio-group>
             </div>
@@ -147,7 +147,8 @@
             <div class="-reset">
               <button mat-raised-button color="accent" type="submit" class="button submitButton"
                 id="submitButton"  onsubmit="onSubmit()">Submit</button>
-              <button mat-raised-button color="accent" type="reset" class="resetButton button">Reset</button>
+              
+              <button mat-raised-button color="accent"  (click)="onDelete()" type="reset" class="resetButton button">Reset</button>
             </div>
         </div>
 
