--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,38 +1,38 @@
 <div class="main-content">
-    <div class="header-content">
-        <div class="emp-detail-text">
-            Employee Details
-            <div class="emp-count">10</div>
-        </div>
-        
-        <a class="add-button" routerLink="/addemployee"><img src="../assets/icons/add-24px.svg" alt="Icon">Add User</a>
-    </div>
-    <div class="table-main">
-        <table class="table" id="display">
-            <tr>
-                <th></th>
-                <th>Name</th>
-                <th>Gender</th>
-                <th>Department</th>
-                <th>Salary</th>
-                <th>Start Date</th>
-                <th>Actions</th>
-            </tr>
-            <tr>
-                <td><img class="profile" alt="" src="../assets/profile-images/Ellipse -7.png"></td>
-                <td>Megha Angadi</td>
-                <td>Female</td>
-                <td>
-                    <div class="dept-label">HR</div>
-                    <div class="dept-label">Finance</div>
-                </td >
-                <td>300000</td>
-                <td>1 Nov 2020</td>
-                <td>
-                    <img id="1" alt="delete" src="../assets/icons/delete-black-18dp.svg" >
-                    <img id="1" alt="Edit" src="../assets/icons/create-black-18dp.svg">
-                </td>
-            </tr>
-        </table>
-    </div>
+  <div class="header-content">
+      <div class="emp-detail-text">
+          Employee Details
+          <div class="emp-count">10</div>
+      </div>
+      
+      <a class="add-button" routerLink="/addemployee"><img src="../assets/icons/add-24px.svg" alt="Icon">Add User</a>
+  </div>
+  <div class="table-main">
+      <table class="table" id="display">
+          <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Gender</th>
+              <th>Department</th>
+              <th>Salary</th>
+              <th>Start Date</th>
+              <th>Actions</th>
+          </tr>
+          <tr *ngFor="let data of empData ; let i =index">
+              <td><img class="profile" alt="" src={{data.profilePic}}></td>
+              <td>{{data.empName}}</td>
+              <td>{{data.empGender}}</td>
+              <td>
+                  <div class="dept-label">HR</div>
+                  <div class="dept-label">Finance</div>
+              </td >
+              <td>{{data.empSalary}}</td>
+              <td>1 Nov 2020</td>
+              <td>
+                  <img id="1" alt="delete" src="../assets/icons/delete-black-18dp.svg" (click)="onDelete(i)">
+                  <img id="1" alt="Edit" src="../assets/icons/create-black-18dp.svg">
+              </td>
+          </tr>
+      </table>
+  </div>
 </div>
