--- a/src/app/add-employee/add-employee.component.html
+++ b/src/app/add-employee/add-employee.component.html
@@ -1,13 +1,13 @@
 <div class="form-content">
-    <form class="form" [formGroup]="employeeFormGroup"  (ngSubmit)="onSubmit()" >
+    <form class="form" [formGroup]="employeeFormGroup" (ngSubmit)="onSubmit()">
         <div class="form-head ">Employee Payroll Form</div>
 
         <div class="row-content">
             <mat-label class="label text" for="name">FullName</mat-label>
             <mat-form-field class="example-full-width" appearance="outline">
-                <input class="input" matInput placeholder="Your name" ngDefaultControl formControlName="empName">
-                <mat-error *ngIf="checkError('empName', 'required')">Name is required</mat-error>
-                <mat-error *ngIf="checkError('empName', 'pattern')">Name should start with upper case and should have minimum of 3 characters</mat-error>
+                <input class="input" matInput placeholder="Your name" ngDefaultControl formControlName="name">
+                <mat-error *ngIf="checkError('name', 'required')">Name is required</mat-error>
+                <mat-error *ngIf="checkError('name', 'pattern')">Name should start with upper case and should have minimum of 3 characters</mat-error>
             </mat-form-field>
         </div>
 
@@ -24,8 +24,8 @@
                     <mat-radio-button name="profile" color="primary" value="../assets/profile-images/Ellipse 3.png">
                         <img class="profile" id='image3' src="../assets/profile-images/Ellipse 3.png">
                     </mat-radio-button>
-                    <mat-radio-button name="profile" color="primary" value="../assets/profile-images/Ellipse 7.png">
-                        <img class="profile" id='image4' src="../assets/profile-images/Ellipse 7.png">
+                    <mat-radio-button name="profile" color="primary" value="../assets/profile-images/Ellipse 4.png">
+                        <img class="profile" id='image4' src="../assets/profile-images/Ellipse 4.png">
                     </mat-radio-button>
                 </mat-radio-group>
             </div>
@@ -34,11 +34,11 @@
         <div class="row-content">
             <mat-label class="label text" for="gender">Gender</mat-label>
             <div>
-                <mat-radio-group ngDefaultControl formControlName="empGender">
-                    <mat-radio-button name="gender" color="primary" value="Male">
+                <mat-radio-group ngDefaultControl formControlName="gender">
+                    <mat-radio-button name="gender" color="primary" value="male">
                         <mat-label class="text" for="male">Male</mat-label>
                     </mat-radio-button>
-                    <mat-radio-button name="gender" color="primary" value="Female">
+                    <mat-radio-button name="gender" color="primary" value="female">
                         <mat-label class="text" for="female">Female</mat-label>
                     </mat-radio-button>
                 </mat-radio-group>
@@ -46,17 +46,17 @@
         </div>
 
         <div class="row-content">
-            <mat-label class="label text" for="depatment">Department</mat-label>
-            <div *ngFor="let departmentData of departments">
-                <mat-checkbox class="checkbox" [value]="departmentData.value">
-                    <mat-label class="text" for="male">{{departmentData.name}}</mat-label>
+            <label class="label text" for="departments">Department</label>
+            <div *ngFor="let department of departments">
+                <mat-checkbox #checkbox class="checkbox" type="checkbox" color="primary" [value]="department.value" (change)="onCheckboxChange($event)">
+                    <label class="text">{{department.name}}</label>
                 </mat-checkbox>
             </div>
         </div>
 
         <div class="row-content">
             <mat-label class="label text" for="salary">Choose your Salary </mat-label>
-            <mat-slider thumbLabel [displayWith]="formatLabel" #salaryOutput (change)="updateSetting($event)" color="primary" tickInterval="1000" aria-label="units" class="salary-input" name="salary" min="10000" max="5000000" step="100" [value]="salaryOutput" formControlName="empSalary">
+            <mat-slider thumbLabel [displayWith]="formatLabel" #salaryOutput (change)="updateSetting($event)" color="primary" tickInterval="1000" aria-label="units" class="salary-input" name="salary" min="300000" max="500000" step="100" [value]="salaryOutput" formControlName="salary">
             </mat-slider>
         </div>
 
@@ -135,9 +135,9 @@
                 <button mat-raised-button color="accent" class="resetButton button cancelButton">Cancel</button>
             </a>
             <div class="submit-reset">
-                <a>
-                    <button mat-raised-button color="accent"  type="submit" class="button submitButton" id="submitButton">Submit</button>
-                </a>
+
+                <button mat-raised-button color="accent" type="submit" class="button submitButton" id="submitButton">Submit</button>
+
                 <button mat-raised-button color="accent" type="reset" class="resetButton button">Reset</button>
             </div>
         </div>
